upate analysis.ipynb

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "source": [
     "### Select newspaper that are owned by a group with multiple newspaper\n",
-    "We keep only the newspapers for which we identified an owner that owns at least X other newspapers."
+    "We keep only the newspapers for which we identified an owner that owns at least 4 other newspapers."
    ]
   },
   {
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Minimum number of newspaper needed in a group to consider that group\n",
+    "# Minimum number of newspaper needed in a group to consider that group\n",
     "MIN_NEWSPAPER_COUNT = 4\n",
     "\n",
     "# Remove newspaper without identified owner\n",
@@ -279,6 +279,14 @@
     "print(f'We obtain {newspaper_in_group[\"owner\"].nunique()} different groups.')\n",
     "\n",
     "newspaper_in_group"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f34c1061",
+   "metadata": {},
+   "source": [
+    "We keep only newspapers from the USA, and print some stats on them."
    ]
   },
   {
@@ -743,6 +751,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0509826",
+   "metadata": {},
+   "source": [
+    "We project SVD to have a simpler visualization:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "12f1c8d3",
@@ -924,6 +940,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6c8f2c4",
+   "metadata": {},
+   "source": [
+    "We project again, but this time we only include journals from the USA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "bf357c77",
@@ -1090,6 +1114,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abe9dbd8",
+   "metadata": {},
+   "source": [
+    "And now the speaker-projection, for media in the USA, after removing the Townsquare group:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "92e63d38",
@@ -1151,7 +1183,7 @@
    "id": "9dd4104c",
    "metadata": {},
    "source": [
-    "#### Token mais axes identification"
+    "#### Token main axes identification"
    ]
   },
   {
@@ -1271,6 +1303,14 @@
     "| 2    | UK             | Meaningless        |\n",
     "| 3    | Music          | Sport              |\n",
     "| 4    | Canada         | Meaningless        |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5926ddc6",
+   "metadata": {},
+   "source": [
+    "Projection of the token matrix along its most \"significant\" axes after SVD:"
    ]
   },
   {
@@ -1497,6 +1537,14 @@
     "| 2    | Music                 | Sport              |\n",
     "| 3    | Local / State related | Country wide       |\n",
     "| 4    | ~Montana state        | Louisiana          |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0c79bee",
+   "metadata": {},
+   "source": [
+    "Projection after SVD, for the tokens from USA-journals"
    ]
   },
   {
@@ -1728,14 +1776,24 @@
     "| 3    | Local / State related | Country wide       |\n",
     "| 4    | Election              | Covid              |\n",
     "\n",
-    "We can note than axis 0, 1 and 2 are identic as with the Townsquare media group. Axis 3 is quite similar but less focused on a specific state."
+    "We can note than axis 0, 1 and 2 the same as with the Townsquare media group. Axis 3 is quite similar but less focused on a specific state."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b8f619a",
+   "metadata": {},
+   "source": [
+    "Projection after SVD, for the tokens from USA-journals, with those from the group townsquare Media ignored:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "id": "90dcedab",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1752,6 +1810,14 @@
    ],
    "source": [
     "plot_axes(X_token_USA_selec, selected_newspaper_USA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a91c25f",
+   "metadata": {},
+   "source": [
+    "And another Bokeh Plot"
    ]
   },
   {
