--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -530,7 +530,7 @@
     "We can note than axes 0, 1 and 2 are identical to the previous ones.\n",
     "Axis 3 is quite similar also, but if you delve into the details of the words[^1] you can see they are less related to specific states (e.g. words \"Wyoming\" or \"Montana\"), but rather to states in general.\n",
     "\n",
-    "The projections are now clearer (especially projection **TODO** *x* and *y*), and that for 2 reasons mainly:\n",
+    "The projections are now clearer (especially projection 1-4), and that for 2 reasons mainly:\n",
     " 1. The withdrawal of articles from townsquare media, which had a high variance among several axes. It removed their influence, and hence the SVD projection could take into account the other media more.\n",
     " 2. The removal of some points makes it easier to see the rest of them.\n",
     "\n",
